--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
   },
