--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-hot-toast": "^2.4.1",
-    "framer-motion": "^11.0.0"
+    "framer-motion": "^11.0.0",
+    "i18next": "^23.7.0",
+    "react-i18next": "^13.5.0",
+    "i18next-browser-languagedetector": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
