--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
     "stripe": "^16.12.0",
