Refactor HeroSlides component and backend CORS settings: format headers for axios requests in HeroSlides for better readability, update server CORS configuration to include 'Accept' header, and enhance Vercel deployment settings with appropriate CORS headers for improved API interaction.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,13 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, token, x-requested-with, Accept",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
 }
